--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     text-align:left;
     border-radius:10px;
     font-size:20px;
+    z-index:10;
     background-color:#15b6ff38;
     margin-top:20px;
     background-image: url("./ai.gif");
