--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     display: flex;
     flex-direction:row;
   align-items: center;
+justify-items:center;
   /* text-align: center; */
   background:#222844;
   background-image:url("./background.svg");
